Bug 377678 - KMail header not showing attachment
Summary: KMail header not showing attachment
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.4.1
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-16 08:35 UTC by Michael D
Modified: 2017-04-09 17:48 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 17.04
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Michael D 2017-03-16 08:35:13 UTC
The attachment does not in the header until I change the header theme and change it back again. This occurs e.g. when using KMail 5.2 header theme. No attachment shows until I switch to Fancy Headers and then back again to KMail 5.2.
Comment 1 Michael D 2017-03-16 08:35:59 UTC
Sorry, the original report should say "The attachment does not SHOW in the header until I change the header theme and change it back again".
Comment 2 David Faure 2017-04-09 17:48:05 UTC
Git commit 37b992574c9c36e65fa38d241459b856900fe413 by David Faure.
Committed on 09/04/2017 at 17:46.
Pushed by dfaure into branch 'Applications/17.04'.

Rework timing of script injection for showing attachments in message viewer.

It was sometimes executed too early, before the script that defines qt.jQuery.
FIXED-IN: 17.04

M  +11   -8    messageviewer/src/viewer/viewer_p.cpp
M  +17   -10   messageviewer/src/viewer/webengine/mailwebenginescript.cpp
M  +0    -9    messageviewer/src/viewer/webengine/mailwebengineview.cpp
M  +0    -1    messageviewer/src/viewer/webengine/mailwebengineview.h
M  +2    -2    messageviewer/src/viewer/webengine/tests/testjquerysupportmailwebengine.js
M  +1    -1    webengineviewer/src/webenginepage.cpp
M  +1    -3    webengineviewer/src/webengineview.cpp

https://commits.kde.org/messagelib/37b992574c9c36e65fa38d241459b856900fe413