Rework timing of script injection for showing attachments in message viewer.

It was sometimes executed too early, before the script that defines qt.jQuery.

BUG: 377678
FIXED-IN: 17.04