webengineviewer/src/webengineview.cpp
@@ -76,12 +76,10 @@ WebEngineManageScript *WebEngineView::webEngineManagerScript() const
 
 void WebEngineView::initializeJQueryScript()
 {
-    QFile file;
-    file.setFileName(QStringLiteral(":/data/jquery.min.js"));
+    QFile file(QStringLiteral(":/data/jquery.min.js"));
     file.open(QIODevice::ReadOnly);
     QString jquery = QString::fromUtf8(file.readAll());
     jquery.append(QStringLiteral("\nvar qt = { 'jQuery': jQuery.noConflict(true) };"));
-    file.close();
     d->mManagerScript->addScript(page()->profile(), jquery, QStringLiteral("jquery"), QWebEngineScript::DocumentCreation);
 
 }
